<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/payment_bg"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activities.PaymentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textColor="@color/brown_black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_payment_method"
        android:textColor="@color/brown_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/paymentGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbGpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/google_pay_upi"
            android:textColor="@color/brown_black" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/credit_debit_card"
            android:textColor="@color/brown_black" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbCod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/brown_black" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:backgroundTint="@color/brown_dark"
        android:text="@string/confirm_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>